...
                            }
                        }
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(56.dp)
                        .testTag("loginBtn"),
                    shape = RoundedCornerShape(50.dp),
                    colors = ButtonDefaults.buttonColors(containerColor = OrangeBtn)
                ) {
                    Text(
                        text = "Log in",
                        fontSize = 18.sp,
...
                        text = "Sign up",
                        color = ChocolateBrown,
                        fontWeight = FontWeight.Bold,
                        textDecoration = TextDecoration.Underline,
                        modifier = Modifier
                            .clickable { onSignupClick() }
                            .testTag("registerBtn")
                    )
                }
            }
        }
    }
}
...
