...
                Button(
                    onClick = onGetStarted,
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(56.dp)
                        .padding(horizontal = 42.dp)
                        .testTag("getStartedBtn"),
                    shape = RoundedCornerShape(50.dp),
                    colors = ButtonDefaults.buttonColors(containerColor = OrangeBtn)
                ) {
                    Text(
                        text = "Get Started →",
                        color = PureWhite,
...
